# FastAPI-MVC-App

./: README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  database.py  models.py  routes.py  schemas.py  services.py
